Fix dark mode + version label

--- a/src/global.scss
+++ b/src/global.scss
@@ -35,3 +35,11 @@
 /* @import "@ionic/angular/css/palettes/dark.always.css"; */
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
 @import "@ionic/angular/css/palettes/dark.system.css";
+
+
+body.dark {
+    --ion-background-color: #eeeeee;
+    --ion-text-color: #000000;
+    --ion-label-color: #000000;
+    // puedes redefinir más variables de Ionic aquí
+  }
